--- a/index.html
+++ b/index.html
@@ -1,51 +1,65 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Graham Starr by gstarr</title>
 
-  ga('create', 'UA-57711230-2', 'auto');
-  ga('send', 'pageview');
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Graham Starr</h1>
+        <p></p>
 
-</script>
-    <head>
-        <meta charset="utf-8">
-        <title>Graham Starr</title>
-        <meta name="description" content="Innovation, Technology, and International Affairs."/>
-        <link href="http://fonts.googleapis.com/css?family=Noto+Sans:100,400" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <div id="page">
-            <div id="bio">
-                Hi! I'm <a href="http://www.linkedin.com/in/grahamstarr/">Graham Starr</a>. 
-                <br>
-                <br>
-                I'm a writer, designer, editor, and data nerd. I'm usually employed to “analyze” things and I write a lot of articles that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>.
-                <br>
-                <br>
-               	I do serious things like data and research analysis, and have been involved in roles with titles that have words like "cyber" and "marketing" and "research" and "intern" in the title. I also do less serious things like comedy and I write long-form articles and screenplays and <a href="http://gstarr.github.io/">run-on sentences</a> and musicals and sometimes I build and design things with computers. 
-                <br>
-                <br>
-                I'm currently the Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's oldest student-run humor and satire magazine. I was previously Managing Editor, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a>, and ran Art Direction and <a href="http://www.tuftszamboni.com/">web presence</a>. If I have any free time, you can find me <a href="http://www.medium.com/@GrahamStarr">writing</a>, <a href="http://www.behance.net/grahamstarr">designing</a>, learning a new skill, <a href="http://gstarr.github.io/">making lists</a>, rock climbing, or reading. 
-          	<br>
-          	<br>
-                Feel free to connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out my <a href="resume.pdf">resume here</a> or <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham!">send me an email</a>!
-            </div>
-        </div>
-    </body>
-</html>
-<html>
-<footer>
-	<div align="right">
-    <span style="font-family : Helvetica;color: #000000;"><font size="3">
-    <div id="footer">
-    <br><br>Website and <a href="http://portfolio.gstarr.me/">porfolio</a> created by <a href-"http://www.github.com/gstarr">Graham Starr</a> with CSS by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.
+
+        <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    </font>
-    </span>
-    </div>
-</footer>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
