--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
     <div class="wrapper">
       <header>
         <a href="http://gstarr.github.io/">
-          <img src="logo.png" style="width:200px;height:100px;border:0">
+          <img src="logo.png" style="width:150px;height:75px;border:0">
         </a>
         <p></p>
 
 
         <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
         <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
-        <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
+<!--    <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
+-->
         <p class="view"><a href="http://beyonce.horse/">beyonce.horse</a><small> (a real domain that I own)</small></p>
 
       </header>
@@ -55,7 +56,7 @@
         </div>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>; mobile css by <a href=http://tarrh.me/>Nate Tarrh</a></small></p>
+        <p><small>Hosted on <a href="http://github.com/gstarr">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>; mobile css by <a href=http://tarrh.me/>Nate Tarrh</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
