--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <a href="http://gstarr.github.io/">
           <img src="logo.png" style="width:200px;height:100px;border:0">
         </a>
-        <h1>Graham Starr</h1>
-        <p></p>
+        <h1></h1>
+        <p>Research Analyst, Designer, and Humorist</p>
 
 
         <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
