--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 I'm a writer, designer, editor, and data nerd. People sometimes pay me to “analyze” things and I write a lot of articles that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>.
                 <br>
                 <br>
-               	I enjoy doing "serious" things like data analysis, and have been involved in roles with titles that have words like "research" and "intern" in the title. I also do less serious things like comedy, and I write long-form articles and screenplays and <a href="http://gstarr.github.io/">run-on sentences where everything is in "quotes"</a> and musicals and sometimes I build and design things with computers. 
+               	I enjoy doing "serious" things like data analysis, and have been involved in roles that have words like "research" and "intern" in the title. I also do less serious things like comedy, and I write long-form articles and screenplays and <a href="http://gstarr.github.io/">run-on sentences where everything is in "quotes"</a> and musicals and sometimes I build and design things with computers. 
                 <br>
                 <br>
                 I'm currently the Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's oldest student-run humor and satire magazine. I was previously Managing Editor, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a>, and ran Art Direction and <a href="http://www.tuftszamboni.com/">web presence</a>. If I have any free time, you can find me <a href="http://www.medium.com/@GrahamStarr">writing</a>, <a href="http://www.behance.net/grahamstarr">designing</a>, learning a new skill, <a href="http://gstarr.github.io/">making lists</a>, rock climbing, or reading. 
-          	<br>
-          	<br>
-                Feel free to connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out my <a href="http://files.gstarr.me/resume.pdf">resume here</a> or <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">send me an email</a>!
+              	<br>
+              	<br>
+                Feel free to connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out an (outdated) <a href="http://files.gstarr.me/resume.pdf">resume here</a> or <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">send me an email</a>!
             </p>
             </div>
         </div>
